--- a/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
@@ -1,14 +1,15 @@
 .superInput {
-background: #b1e065;
+    background: #b1e065;
 }
 
 .errorInput {
-    border: 3px solid lime;
-    background: red;
+    border: 2px solid lime;
+    background: #f36b6b;
 }
 
 .error {
-    color: red;
+    color: #b9662b;
     font-weight: 900;
+    margin-bottom: 20px;
 }
 
