--- a/src/p2-homeworks/h5/Header.module.css
+++ b/src/p2-homeworks/h5/Header.module.css
@@ -18,7 +18,7 @@
 }
 
 
-.junior_link {
+.junior_link_box {
     width: 120px;
     height: 30px;
     outline:    1px solid black;
@@ -26,6 +26,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #63a484;
+    border-radius: 5px;
+}
+
+
+.junior_link {
+    text-decoration: none;
+    text-underline: none;
+}
+
+
+.junior_link_box:hover {
+    background-color: #477560;
 }
 
 
@@ -37,5 +50,10 @@
     justify-content: center;
     align-items: center;
     margin-left: 20px;
+    border-radius: 5px;
 }
 
+.active {
+    font-weight: 700;
+    color: white;
+}
