--- a/src/p2-homeworks/h4/HW4.module.css
+++ b/src/p2-homeworks/h4/HW4.module.css
@@ -5,7 +5,10 @@
 .column {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start ;
+    margin-left: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .testSpanError {
