slider super range completed

--- a/src/p2-homeworks/h11/HW11.module.css
+++ b/src/p2-homeworks/h11/HW11.module.css
@@ -1,9 +1,4 @@
-.doubleRange_box {
-    display: flex;
-}
-
-.value_num {
-    display: inline-block;
-    width: 45px;
-    padding-left: 10px;
+.range_box {
+    margin-bottom: 50px;
+    margin-top: 15px;
 }
