--- a/src/p2-homeworks/h12/HW12.module.css
+++ b/src/p2-homeworks/h12/HW12.module.css
@@ -21,3 +21,13 @@
 .some-text {
     color: darkslateblue;
 }
+
+.bg_box {
+    width: 500px;
+    height: 300px;
+    border: 1px solid #000;
+    transition: 0.5s;
+    opacity: 0.5;
+}
+
+
